# agentsafe

./: .gitignore  ABOUT.md  Makefile  PROJECT_DESCRIPTION.md  README.md  docker-compose.otel.yml  pyproject.toml
examples/: basic_usage.py  garak.md  garak_servers.py  llama32_jailbreak_nemotron_test.ipynb  local_otel_openai_demo.py  observability_demo.py  ollama_openai_agentsafe_demo.ipynb  sjsu_chicken_chatbot_otel_demo.ipynb  sjsu_chicken_chatbot_ui_safe.ipynb  sjsu_chicken_chatbot_ui_unsafe.ipynb  with_openai.py
site/: package-lock.json  package.json
site/app/: globals.css  layout.tsx  page.tsx
site/app/docs/: layout.tsx  page.tsx
site/app/docs/quickstart/: page.tsx
site/components/: CTA.tsx  CodeBlock.tsx  CursorBackground.tsx  DocCard.tsx  DocCodeBlock.tsx  DynamicCodeBlock.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  OnThisPage.tsx  SafetyFlowDiagram.tsx  SyntaxHighlighter.tsx  UseWith.tsx  VoicePreview.tsx
src/agentsafe/: __init__.py  checker.py  cli.py  exceptions.py  models.py  observability.py  wrapper.py
tests/: test_core.py
